SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Bodyweight_1_Month_Ago__c.field-meta.xml
<CustomField>
    <fullName>Bodyweight_1_Month_Ago__c</fullName>
    <label>Bodyweight - 1 Month Ago</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>