SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Bodyweight_1_Month_Progression__c.field-meta.xml
<CustomField>
    <fullName>Bodyweight_1_Month_Progression__c</fullName>
    <formula>IF(
Bodyweight_1_Month_Ago__c= null || Bodyweight_1_Month_Ago__c= 0,
NULL,
IF(
Bodyweight__c &gt; Bodyweight_1_Month_Ago__c,
TEXT(ABS(Bodyweight__c- Bodyweight_1_Month_Ago__c)) &amp; &quot; lb. or kg. Increase&quot;,
IF(
Bodyweight_1_Month_Ago__c &gt; Bodyweight__c,
TEXT(ABS(Bodyweight_1_Month_Ago__c- Bodyweight__c)) &amp; &quot; lb. or kg. Decrease&quot;,
&quot;No Change&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bodyweight - Progress from 1st of Month</label>
    <type>Text</type>
</CustomField>