SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Bodyweight_1_Week_Progression__c.field-meta.xml
<CustomField>
    <fullName>Bodyweight_1_Week_Progression__c</fullName>
    <formula>IF(
Bodyweight_1_Week_Ago__c = null || Bodyweight_1_Week_Ago__c = 0,
NULL,
IF(
Bodyweight__c&gt; Bodyweight_1_Week_Ago__c,
TEXT(ABS(Bodyweight__c- Bodyweight_1_Week_Ago__c)) &amp; &quot; lb. or kg. Increase&quot;,
IF(
Bodyweight_1_Week_Ago__c &gt; Bodyweight__c,
TEXT(ABS(Bodyweight_1_Week_Ago__c - Bodyweight__c)) &amp; &quot; 1b. or kg. Decrease&quot;,
&quot;No Change&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bodyweight - Progress from Start of Week</label>
    <type>Text</type>
</CustomField>