SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Calves__c.field-meta.xml
<CustomField>
    <fullName>Calves__c</fullName>
    <inlineHelpText>Either flex or keep calves relaxed and measure widest point with measuring tape</inlineHelpText>
    <label>Calves</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>