SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Chest__c.field-meta.xml
<CustomField>
    <fullName>Chest__c</fullName>
    <description>Measure widest point of chest with measuring tape by wrapping it around your body</description>
    <label>Chest</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>