SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Hips_1_Month_Ago__c.field-meta.xml
<CustomField>
    <fullName>Hips_1_Month_Ago__c</fullName>
    <label>Hips - 1 Month Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>