SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Hips_1_Month_Progression__c.field-meta.xml
<CustomField>
    <fullName>Hips_1_Month_Progression__c</fullName>
    <formula>IF(
Hips_1_Month_Ago__c= null || Hips_1_Month_Ago__c= 0,
NULL,
IF(
Hips__c &gt; Hips_1_Month_Ago__c,
TEXT(ABS(Hips__c - Hips_1_Month_Ago__c)) &amp; &quot; In. or Mm. Increase&quot;,
IF(
Hips_1_Month_Ago__c&gt; Hips__c ,
TEXT(ABS(Hips_1_Month_Ago__c- Hips__c )) &amp; &quot; In. or Mm. Decrease&quot;,
&quot;No Change&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hips - Progress from 1st of Month</label>
    <type>Text</type>
</CustomField>