SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Hips__c.field-meta.xml
<CustomField>
    <fullName>Hips__c</fullName>
    <inlineHelpText>Measure widest point of hip with measuring tape by wrapping it around your body</inlineHelpText>
    <label>Hips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>