SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Shoulders_1_Week_Ago__c.field-meta.xml
<CustomField>
    <fullName>Shoulders_1_Week_Ago__c</fullName>
    <label>Shoulders - 1 Week Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>