SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Shoulders_1_Week_Progression__c.field-meta.xml
<CustomField>
    <fullName>Shoulders_1_Week_Progression__c</fullName>
    <formula>IF(
Shoulders_1_Week_Ago__c= null || Shoulders_1_Week_Ago__c= 0,
NULL,
IF(
Shoulders__c	 &gt; Shoulders_1_Week_Ago__c,
TEXT(ABS(Shoulders__c	- Shoulders_1_Week_Ago__c)) &amp; &quot; In. or Mm. Increase&quot;,
IF(
Shoulders_1_Week_Ago__c&gt; Shoulders__c	 ,
TEXT(ABS(Shoulders_1_Week_Ago__c- Shoulders__c	)) &amp; &quot; In. or Mm. Decrease&quot;,
&quot;No Change&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shoulders - Progress from Start of Week</label>
    <type>Text</type>
</CustomField>