SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Shoulders__c.field-meta.xml
<CustomField>
    <fullName>Shoulders__c</fullName>
    <inlineHelpText>Measure widest point of shoulders with measuring tape by wrapping it around your body</inlineHelpText>
    <label>Shoulders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>