SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Thighs_1_Week_Progression__c.field-meta.xml
<CustomField>
    <fullName>Thighs_1_Week_Progression__c</fullName>
    <formula>IF(
Thigh_1_Week_Ago__c= null || Thigh_1_Week_Ago__c= 0,
NULL,
IF(
Thighs__c&gt; Thigh_1_Week_Ago__c,
TEXT(ABS(Thighs__c- Thigh_1_Week_Ago__c)) &amp; &quot; In. or Mm. Increase&quot;,
IF(
Thigh_1_Week_Ago__c &gt; Thighs__c,
TEXT(ABS(Thigh_1_Week_Ago__c- Thighs__c)) &amp; &quot; In. or Mm. Decrease&quot;,
&quot;No Change&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thighs - Progress from Start of Week</label>
    <type>Text</type>
</CustomField>