SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Thighs__c.field-meta.xml
<CustomField>
    <fullName>Thighs__c</fullName>
    <inlineHelpText>Either flex or keep thighs relaxed and measure widest point with measuring tape</inlineHelpText>
    <label>Thighs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>