SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Upper_Arms_1_Month_Ago__c.field-meta.xml
<CustomField>
    <fullName>Upper_Arms_1_Month_Ago__c</fullName>
    <label>Upper Arms - 1 Month Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>