SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Upper_Arms_1_Month_Progression__c.field-meta.xml
<CustomField>
    <fullName>Upper_Arms_1_Month_Progression__c</fullName>
    <formula>IF(
Upper_Arms_1_Month_Ago__c= null || Upper_Arms_1_Month_Ago__c= 0,
NULL,
IF(
UpperArms__c&gt; Upper_Arms_1_Month_Ago__c,
TEXT(ABS(UpperArms__c- Upper_Arms_1_Month_Ago__c)) &amp; &quot; In. or Mm. Increase&quot;,
IF(
Upper_Arms_1_Month_Ago__c&gt; UpperArms__c,
TEXT(ABS(Upper_Arms_1_Month_Ago__c- UpperArms__c)) &amp; &quot; In. or Mm. Decrease&quot;,
&quot;No Change&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upper Arms - Progress from 1st of Month</label>
    <type>Text</type>
</CustomField>