SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/UpperArms__c.field-meta.xml
<CustomField>
    <fullName>UpperArms__c</fullName>
    <inlineHelpText>Either flex or keep upper arm relaxed and measure widest point with measuring tape</inlineHelpText>
    <label>Upper Arms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>