SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Waist_1_Month_Progression__c.field-meta.xml
<CustomField>
    <fullName>Waist_1_Month_Progression__c</fullName>
    <formula>IF(
Waist_1_Month_Ago__c = null || Waist_1_Month_Ago__c = 0,
NULL,
IF(
Waist__c &gt; Waist_1_Month_Ago__c,
TEXT(ABS(Waist__c - Waist_1_Month_Ago__c)) &amp; &quot; In. or Mm. Increase&quot;,
IF(
Waist_1_Month_Ago__c &gt; Waist__c,
TEXT(ABS(Waist_1_Month_Ago__c - Waist__c)) &amp; &quot; In. or Mm. Decrease&quot;,
&quot;No Change&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waist - Progress from 1st of Month</label>
    <type>Text</type>
</CustomField>