SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Waist_1_Week_Progression__c.field-meta.xml
<CustomField>
    <fullName>Waist_1_Week_Progression__c</fullName>
    <formula>IF(
    Waist_7_Days_Ago__c = null  || Waist_7_Days_Ago__c = 0,
    NULL,
    IF(
        Waist__c &gt; Waist_7_Days_Ago__c,
        TEXT(ABS(Waist__c - Waist_7_Days_Ago__c)) &amp; &quot; In. or Mm. Increase&quot;,
        IF(
            Waist_7_Days_Ago__c &gt; Waist__c,
            TEXT(ABS(Waist_7_Days_Ago__c - Waist__c)) &amp; &quot; In. or Mm. Decrease&quot;,
            &quot;No Change&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waist - Progress from Start of Week</label>
    <type>Text</type>
</CustomField>