SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Waist_7_Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>Waist_7_Days_Ago__c</fullName>
    <label>Waist - 1 Week Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>