SalesforceWorkoutLoggerApp/force-app/main/default/objects/User/fields/Waist__c.field-meta.xml
<CustomField>
    <fullName>Waist__c</fullName>
    <inlineHelpText>Stand-up, keep your waist relaxed and measure around the narrowest part of your waist with measuring tape</inlineHelpText>
    <label>Waist</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>